trying to fix horizontal scroll

--- a/app/styles/elements.scss
+++ b/app/styles/elements.scss
@@ -6,6 +6,9 @@ html, body {
 	height: 100%;
 	width: 100%;
 }
+.page-wrap, .container {
+	max-width: 100%;
+}
 .page-wrap {
   min-height: 100%;
   /* equal to footer height */
